# Advent-of-Code-2025

./: .gitignore  LICENSE  README.md  advent-of-code-2025.opam  dune-project
lib/: day01.ml  day01.mli  day02.ml  day02.mli  day03.ml  day04.ml  day05.ml  day06.ml  day06.mli  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day11.mli  day12.ml  dune
random/: day_10.py
test/: dune  test_advent_of_code_2025.ml
